--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,43 @@
 {
   "name": "server",
-  "version": "1.0.0",
-  "description": "",
+  "version": "2.0.1",
+  "description": "Server made with typescript",
   "main": "server.js",
   "scripts": {
-    "server": "node server.js",
-    "watch": "nodemon"
+    "prestart": "npm run build",
+    "start": "node dist/server.js",
+    "build": "rimraf dis && npx tsc",
+    "preserve": "npm run build",
+    "serve": "npx tsc -w & nodemon dist/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lrpineda/frugalize.git"
+  },
+  "author": "Luis Pineda",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/lrpineda/frugalize/issues"
+  },
+  "homepage": "https://github.com/lrpineda/frugalize#readme",
   "dependencies": {
-    "apollo-server-express": "^3.10.2",
-    "bcrypt": "^5.0.1",
-    "express": "^4.18.1",
+    "@tsconfig/recommended": "^1.0.2",
+    "apollo-server-express": "^3.11.1",
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.3"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.10.0",
+    "rimraf": "^4.1.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
+    "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.14.2",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.9.5"
   }
 }
